--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/lavelineconcept-logodamga.png" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="shortcut icon" href="/favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="La Véline Concept - Lüks ve Minimalist Ev Tekstili Koleksiyonu. Havlu, Bornoz ve eviniz için şık dokunuşlar." />
+
+  <!-- Structured Data for Google Logo -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://lavelineconcept.com",
+      "logo": "https://lavelineconcept.com/favicon.png"
+    }
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap"
     rel="stylesheet">
-  <title>La Véline Concept | Çok Yakında</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <title>La Véline Concept | Lüks Ev Tekstili</title>
 </head>
 
 <body>
