--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="La Véline Concept - Lüks ve Minimalist Ev Tekstili Koleksiyonu. Havlu, Bornoz ve eviniz için şık dokunuşlar." />
+    content="La Véline Concept - düğün, nişan hediyelikleri, kişiye özel tasarımlar ve daha fazlası." />
 
   <!-- Structured Data for Google Logo -->
   <script type="application/ld+json">
@@ -26,7 +26,7 @@
     href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <title>La Véline Concept | Lüks Ev Tekstili</title>
+  <title>La Véline Concept</title>
 </head>
 
 <body>
